- Fixed bug #54242 (dba_insert returns true if key already exists)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@309172 c90b9560-bf6c-de11-be94-00142212c4b1